# tw-futures-realtime

./: .gitignore  HOLDING_COMPARISON.html  README.md  SKILL.md  STRATEGY_BACKTEST_PLAN.md  STRATEGY_FINAL_REPORT.md  STRATEGY_REPORT.html  autostart.sh  pyproject.toml
.qwen/: settings.json
config/: night_config.yaml  trade_config.yaml
data/taifex_raw/: TMF_5m_20260331_011630.csv  TWII_5m_60d.csv
docs/: NIGHT_STRATEGY_OPTIMIZATION_REPORT.md  crontab_example.txt
exports/simulations/: report_20260328_183758.md  report_20260328_184530.md  report_20260328_194431.md  report_20260328_221536.md
scripts/: advanced_backtest.py  compare_combo1.py  compare_strategies.py  daily_simulation.py  daily_simulation_callback.py  download_tmf_data.py  dry_run_test.sh  historical_backtest.py  monitor_signals.sh  morning_check.sh  optimize_strategy.py  realtime_monitor.py  run_plan_backtest.py  run_tmf_execution_pk.py  test_daily_report.py  test_email.py  vectorbt_stats.py  watch_strategy_a.sh
scripts/archive/: daily_simulation_hybrid.py  daily_simulation_v2.py  integrated_trading_system.py
scripts/backtest/: optimize_entry_params.py
scripts/dev/: architecture_demo.py  backtest_night_strategy.py  business_logic_demo.py  test_shioaji_connection.py  test_shioaji_paper_trading.py  test_shioaji_us_stocks.py  vectorized_backtest_demo.py
scripts/tools/: compare_strategies.py  dashboard_monitor.py  download_history_data.py  dry_run_report.py  export_trade_data.py  monitor_strategy_a.py  optimize_parameters.py  realtime_monitor.py  strategy_diagnosis.py  vectorbt_param_optimization.py
(+8 files in other folders)
